--- a/MergeSort/SortingAlgorithms.csproj
+++ b/MergeSort/SortingAlgorithms.csproj
@@ -51,6 +51,7 @@
     <Compile Include="QuickSort.cs" />
     <Compile Include="SortingAlgorithms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortingUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
