--- a/MergeSort/SortingAlgorithms.csproj
+++ b/MergeSort/SortingAlgorithms.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BottomUpMergeSort.cs" />
     <Compile Include="InsertationSort.cs" />
     <Compile Include="ISortingAlgorithm.cs" />
+    <Compile Include="LinkedListSort.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="QuickSort.cs" />
     <Compile Include="SortingAlgorithms.cs" />
