--- a/MergeSort/SortingAlgorithms.csproj
+++ b/MergeSort/SortingAlgorithms.csproj
@@ -57,6 +57,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LinearDataStructures\DataStructures.csproj">
+      <Project>{7250af8a-5430-4f3e-989e-b647a20244f9}</Project>
+      <Name>DataStructures</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
