--- a/MergeSort/SortingAlgorithms.csproj
+++ b/MergeSort/SortingAlgorithms.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ISortingAlgorithm.cs" />
     <Compile Include="LinkedListSort.cs" />
     <Compile Include="MergeSort.cs" />
+    <Compile Include="NaturalMergeSort.cs" />
     <Compile Include="QuickSort.cs" />
     <Compile Include="SortingAlgorithms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
