--- a/SortUnitTest/SortUnitTest.csproj
+++ b/SortUnitTest/SortUnitTest.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LinearDataStructures\DataStructures.csproj">
+      <Project>{7250af8a-5430-4f3e-989e-b647a20244f9}</Project>
+      <Name>DataStructures</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MergeSort\SortingAlgorithms.csproj">
       <Project>{42e6d4dc-4121-4ccf-9c01-50e8d7b4d0b9}</Project>
       <Name>SortingAlgorithms</Name>
