--- a/MergeSort/SortingAlgorithms.csproj
+++ b/MergeSort/SortingAlgorithms.csproj
@@ -54,6 +54,7 @@
     <Compile Include="MergeSort.cs" />
     <Compile Include="NaturalMergeSort.cs" />
     <Compile Include="QuickSort.cs" />
+    <Compile Include="ShellSort.cs" />
     <Compile Include="SortingAlgorithms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortingUtils.cs" />
