--- a/LinearDataStructures/DataStructures.csproj
+++ b/LinearDataStructures/DataStructures.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Queue.cs" />
     <Compile Include="Stack.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{1d8887a6-a1cf-4298-80db-af7273882f67}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
