--- a/DataStructuresTest/DataStructuresTest.csproj
+++ b/DataStructuresTest/DataStructuresTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTest.cs" />
     <Compile Include="QueueTest.cs" />
+    <Compile Include="MaximumPriorityQueueTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LinearDataStructures\DataStructures.csproj">
