--- a/LinearDataStructures/DataStructures.csproj
+++ b/LinearDataStructures/DataStructures.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryHeap.cs" />
+    <Compile Include="MaximumPriorityQueue.cs" />
     <Compile Include="LinkedList.cs" />
     <Compile Include="LinkedListNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
