--- a/LinearDataStructures/DataStructures.csproj
+++ b/LinearDataStructures/DataStructures.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryHeap.cs" />
+    <Compile Include="BinarySearchTree.cs" />
+    <Compile Include="BinarySearchTreeNode.cs" />
     <Compile Include="LinkedList.cs" />
     <Compile Include="LinkedListNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
