--- a/DataStructuresTest/DataStructuresTest.csproj
+++ b/DataStructuresTest/DataStructuresTest.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BinarySearchTreeTest.cs" />
     <Compile Include="LinkedListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTest.cs" />
