--- a/LinearDataStructures/DataStructures.csproj
+++ b/LinearDataStructures/DataStructures.csproj
@@ -46,6 +46,8 @@
     <Compile Include="LinkedListNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
+    <Compile Include="RedBlackTree.cs" />
+    <Compile Include="RedBlackTreeNode.cs" />
     <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
