--- a/DataStructuresTest/DataStructuresTest.csproj
+++ b/DataStructuresTest/DataStructuresTest.csproj
@@ -45,7 +45,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -56,6 +58,7 @@
     <Compile Include="StackTest.cs" />
     <Compile Include="QueueTest.cs" />
     <Compile Include="MaximumPriorityQueueTest.cs" />
+    <Compile Include="LLRBTreeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LinearDataStructures\DataStructures.csproj">
