Add MinHeap, change testing framework to NUnit, fix mixed tabs spaces

--- a/DataStructuresTest/DataStructuresTest.csproj
+++ b/DataStructuresTest/DataStructuresTest.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -59,12 +62,19 @@
     <Compile Include="QueueTest.cs" />
     <Compile Include="MaximumPriorityQueueTest.cs" />
     <Compile Include="LLRBTreeTest.cs" />
+    <Compile Include="MinHeapTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataStructures\DataStructures.csproj">
       <Project>{7250af8a-5430-4f3e-989e-b647a20244f9}</Project>
       <Name>DataStructures</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
