--- a/DataStructuresTest/App.config
+++ b/DataStructuresTest/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-  <configuration>
-    <globalization uiCulture="en" culture="en-US" />
-  </configuration>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+    <globalization uiCulture="en" culture="en-US"/>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
