--- a/DataStructures.Nonlinear.GraphTest/DataStructures.Nonlinear.GraphTest.csproj
+++ b/DataStructures.Nonlinear.GraphTest/DataStructures.Nonlinear.GraphTest.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BreathFirstSearchTest.cs" />
     <Compile Include="DepthFirstSearchTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
