--- a/UtilsTest/UtilsTest.csproj
+++ b/UtilsTest/UtilsTest.csproj
@@ -53,7 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UtilsTest.cs" />
+    <Compile Include="ArrayUtilsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
