--- a/DataStructures.Tests/App.config
+++ b/DataStructures.Tests/App.config
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<configuration>
-    <globalization uiCulture="en" culture="en-US"/>
-  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
+<configuration><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
