--- a/DataStructures/DataStructures.csproj
+++ b/DataStructures/DataStructures.csproj
@@ -39,16 +39,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinarySearchTree.cs" />
-    <Compile Include="BinarySearchTreeNode.cs" />
-    <Compile Include="LinkedList.cs" />
-    <Compile Include="LinkedListNode.cs" />
-    <Compile Include="List.cs" />
+    <Compile Include="Nonlinear\Graphs\AdjacencyListGraph.cs" />
+    <Compile Include="Nonlinear\Graphs\BreathFirstSearch.cs" />
+    <Compile Include="Nonlinear\Graphs\DepthFirstSearch.cs" />
+    <Compile Include="Nonlinear\Graphs\IGraphSearch.cs" />
+    <Compile Include="Nonlinear\Trees\BinarySearchTree.cs" />
+    <Compile Include="Nonlinear\Trees\BinarySearchTreeNode.cs" />
+    <Compile Include="Linear\LinkedList.cs" />
+    <Compile Include="Linear\LinkedListNode.cs" />
+    <Compile Include="Linear\List.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queue.cs" />
-    <Compile Include="RedBlackTree.cs" />
-    <Compile Include="RedBlackTreeNode.cs" />
-    <Compile Include="Stack.cs" />
+    <Compile Include="Linear\Queue.cs" />
+    <Compile Include="Nonlinear\Trees\RedBlackTree.cs" />
+    <Compile Include="Nonlinear\Trees\RedBlackTreeNode.cs" />
+    <Compile Include="Linear\Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utils\Utils.csproj">
@@ -56,6 +60,7 @@
       <Name>Utils</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
