--- a/DynamicConnectivity/DynamicConnectivity.csproj
+++ b/DynamicConnectivity/DynamicConnectivity.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{2B6F08AD-E3F0-45CB-840E-35B3FCF9468E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnionFind</RootNamespace>
-    <AssemblyName>UnionFind</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>DynamicConnectivity</RootNamespace>
+    <AssemblyName>DynamicConnectivity</AssemblyName>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
