Rename Queue->LinkedQueue, Stack ->LinkedStack

--- a/DataStructures/DataStructures.csproj
+++ b/DataStructures/DataStructures.csproj
@@ -50,10 +50,10 @@
     <Compile Include="Linear\LinkedListNode.cs" />
     <Compile Include="Linear\List.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Linear\Queue.cs" />
+    <Compile Include="Linear\LinkedQueue.cs" />
     <Compile Include="Nonlinear\Trees\RedBlackTree.cs" />
     <Compile Include="Nonlinear\Trees\RedBlackTreeNode.cs" />
-    <Compile Include="Linear\Stack.cs" />
+    <Compile Include="Linear\LinkedStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utils\Utils.csproj">
