--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,4 @@ $RECYCLE.BIN/
 /.vs/Algo/v15/Server/sqlite3/storage.ide-shm
 /.vs/Algo/v15/Server/sqlite3/storage.ide
 /.vs/Algo/v15/Server/sqlite3/db.lock
+.vs/Algo/DesignTimeBuild/.dtbcache
