--- a/UnitTests/DynamicConnectivity.Tests/DynamicConnectivity.Tests.csproj
+++ b/UnitTests/DynamicConnectivity.Tests/DynamicConnectivity.Tests.csproj
@@ -53,7 +53,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="UnionFindTest.cs" />
+    <Compile Include="QuickFindTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WeightedQuickUnionTest.cs" />
   </ItemGroup>
